# ciggurat

./: LICENSE  ciggurat.h  meson.build  meson_options.txt
.vim/: coc-settings.json
src/: meson.build  world.c
subprojects/: mylib.wrap
tests/: basic_world.c  meson.build  world_user_data.c
